Создал классы и методы и 1 функцию в мейн

--- a/Laboratornaya2_2/Laboratornaya2_2.vcxproj
+++ b/Laboratornaya2_2/Laboratornaya2_2.vcxproj
@@ -127,7 +127,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AncetaPrepod.cpp" />
+    <ClCompile Include="AncetaStud.cpp" />
     <ClCompile Include="Laboratornaya2_2.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="AncetaPrepod.h" />
+    <ClInclude Include="AncetaStud.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
