--- a/Laboratornaya2_2/Laboratornaya2_2.vcxproj.filters
+++ b/Laboratornaya2_2/Laboratornaya2_2.vcxproj.filters
@@ -18,5 +18,19 @@
     <ClCompile Include="Laboratornaya2_2.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="AncetaStud.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="AncetaPrepod.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="AncetaStud.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="AncetaPrepod.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
